--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <%= render 'layouts/sidebar' %>
       </div>
       <div id="main_container" class="col-md-10">
-        <% if controller.controller_name == 'admin' || controller.controller_name == 'ncaa_players'  || controller.controller_name == 'ncaa_teams' || controller.controller_name == 'mm_teams' %>
+        <% if controller.controller_name == 'admin' || controller.controller_name == 'ncaa_players'  || controller.controller_name == 'ncaa_teams' %>
           <div id="admin_nav">
             <%= link_to_unless_current 'Admin Home', admin_index_path %>
             <%= link_to_unless_current 'MM Teams', admin_mm_teams_path %>
