--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -220,7 +220,7 @@ textarea {
     a:hover {
         background: image-url("bball_texture_faded.png") 0 0 repeat;
         border: outset 3px #AE5C38;
-        color: #00A2B1;
+        color: #000;
         text-decoration: none;
     }
     span.current_main_nav {
