--- a/app/views/mm_teams/preferred_players.html.erb
+++ b/app/views/mm_teams/preferred_players.html.erb
@@ -1,4 +1,4 @@
-<div class="draft_menu padding-sm">
+<!-- <div class="draft_menu padding-sm">
   <% if !session[:mm_team_id].nil? %>
       <div class="btn-group">
         <%= link_to 'Manage Draft', draft_index_path, :class=> "btn btn-default btn-sm" %>
@@ -9,7 +9,7 @@
   <%= link_to 'My Team', "#", :data => { :team => get_team_for_current_user.id }, :id => "my_team", :class => "btn float-left blue" %>
 
   <div class="clear"></div>
-</div>
+</div> -->
 
 <div class="left_container col-md-6">
 
