--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -126,8 +126,8 @@ textarea {
     display: block;
     width: 200px;
     height: 200px;
-    background: asset-url("final_four_logo_2017.png", image) 0 0 no-repeat;
-    margin: 20px 10px 20px 30px;
+    background: asset-url("final_four_logo.png", image) 0 0 no-repeat;
+    margin: 20px 10px 10px 20px;
 }
 
 #logo_big {
