--- a/app/views/home/_standings.html.erb
+++ b/app/views/home/_standings.html.erb
@@ -14,8 +14,13 @@
   <% @standings.each_with_index do |team, index| %>
     <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd' %>">
       <td class="position"><%= index += 1 %></td>
-      <td class="team_name"><%= link_to team.name, "#", :data => { :team => team.id }, :class => "standings_mm_team" %></td>
-
+      <td class="team_name">
+        <% if Draft.is_completed? %>
+          <%= link_to team.name, "#", :data => { :team => team.id }, :class => "standings_mm_team" %>
+        <% else %>
+          <%= team.name %>
+        <% end %>
+      </td>
       <td class="points"><%= team.total_points.nil? ? '0' : sprintf("%.0f",team.total_points) %></td>
       <td class="games"><%= team.total_games.nil? ? '0' : sprintf("%.0f", team.total_games) %></td>
       <td class="players_remaining"><%= MmTeam.active_players_count_for_team(team.id) %></td>
