--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -22,29 +22,29 @@
         <% end %>
       </li> -->
       <li>
-        <%= link_to_unless_current('My Team', preferred_players_mm_team_url(get_team_for_current_user)) do |link| %>
+        <%= link_to_unless_current('Create Team', preferred_players_mm_team_url(get_team_for_current_user)) do |link| %>
             <span class="current_main_nav"><%= link %></span>
             <span class="current_main_nav_tip"></span>
         <% end %>
       </li>
-      <li>
+      <!-- <li>
         <%= link_to_unless_current('My Roster', my_roster_mm_team_url(get_team_for_current_user)) do |link| %>
             <span class="current_main_nav"><%= link %></span>
             <span class="current_main_nav_tip"></span>
         <% end %>
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <%= link_to_unless_current('MM Rosters', mm_teams_rosters_path) do |link| %>
             <span class="current_main_nav"><%= link %></span>
             <span class="current_main_nav_tip"></span>
         <% end %>
-      </li>
-      <li>
+      </li> -->
+<!--       <li>
         <%= link_to_unless_current('Player Scoring', player_scoring_index_path) do |link| %>
           <span class="current_main_nav"><%= link %></span>
           <span class="current_main_nav_tip"></span>
         <% end %>
-      </li>
+      </li> -->
       <li>
         <%= link_to_unless_current('Bracket', bracket_index_path) do |link| %>
           <span class="current_main_nav"><%= link %></span>
