--- a/app/views/mm_teams/_form.html.erb
+++ b/app/views/mm_teams/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for(@mm_team) do |f| %>
   <% if @mm_team.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@mm_team.errors.count, "error") %> prohibited this mm_team from being saved:</h2>
+      <% @mm_team.errors.each do |attr,msg| %>
+          <h2><%= msg %></h2>
+      <% end %>
     </div>
   <% end %>
 
