--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -43,6 +43,7 @@
     height: 720px;
     display: block;
     width: 100%;
+    overflow: auto;
     tbody {
         width: 100%;
         display: table;
