Corrected issues with regions being displayed incorrectly on draft page

--- a/app/views/shared/_preferred_player_list.html.erb
+++ b/app/views/shared/_preferred_player_list.html.erb
@@ -13,10 +13,10 @@
 <div class="clear"></div>
 
 <div class="regions_container">
-  <b>Regions</b> - <span class="<%= get_region_css_class(1) %>">E = East</span>,
-  <span class="<%= get_region_css_class(2) %>">SE = South East</span>,
-  <span class="<%= get_region_css_class(3) %>">SW = South West</span>,
-  <span class="<%= get_region_css_class(4) %>">W = West</span>
+  <b>Regions</b> - <span class="<%= get_region_css_class(4) %>">E = East</span>,
+  <span class="<%= get_region_css_class(2) %>">M = Midwest</span>,
+  <span class="<%= get_region_css_class(1) %>">S = South</span>,
+  <span class="<%= get_region_css_class(3) %>">W = West</span>
 </div>
 <div class="clear"></div>
 
