Updates to region info that affects css for views

--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -533,12 +533,12 @@ div.regions_container {
     padding: 2px;
 }
 
-.southeast_region {
+.midwest_region {
     color: purple;
     padding: 2px;
 }
 
-.southwest_region {
+.south_region {
     color: green;
     padding: 2px;
 }
