Ruby Upgrade to 2.4.1
- Updated Gems
- Adjusted css asset-url references

--- a/app/assets/stylesheets/bracket.css.scss
+++ b/app/assets/stylesheets/bracket.css.scss
@@ -69,7 +69,7 @@ div.south {
     display: block;
     width: 1300px;
     height: 800px;
-    background: asset-url("bracket.png", image) 0 0 no-repeat;
+    background: asset-url("bracket.png") 0 0 no-repeat;
     margin: 10px auto;
 }
 
