--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <div class="current_user">
             <p>
               <%= current_user.email %>
-              <%= link_to 'Logout', destroy_user_session_path %>
+              <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
             </p>
           </div>
           <div class="clear"></div>
