Updates to the my drafted players view

--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -125,15 +125,15 @@ textarea {
 #logo {
     display: block;
     width: 200px;
-    height: 200px;
-    background: asset-url("final_four_logo.png") 0 0 no-repeat;
-    margin: 20px 10px 10px 20px;
+    height: 120px;
+    background: asset-url("player_challenge.png") 0 0 no-repeat;
+    margin: 10px 20px 30px 20px;
 }
 
 #logo_big {
     display: block;
     height: 126px;
-    background: asset-url("march_madness_logo_big.png") center center no-repeat;
+    background: asset-url("player_challenge_login.png") center center no-repeat;
     margin: 5% 0 3%;
 }
 
