--- a/app/views/shared/_preferred_player_list.html.erb
+++ b/app/views/shared/_preferred_player_list.html.erb
@@ -1,24 +1,16 @@
 <div id="preferred_players_container_header">My Drafted Players</div>
-<div class="container">
+<div>
   <!-- Filter players allowed to be drafted for:
   <%= select(:preferred_player, :selected_round, options_for_select([['Round 1 & 2', 1], ['Round 3', 3], ['Round 4', 4], ['Round 5', 5], ['Round 6', 6]],
       @selected_round), {}, html_options = {:onchange => "getPreferredPlayersByRound(#{@mm_team.id})"})  %> -->
 </div>
-<div class="container">
-  Total Players Selected: <%= @preferred_players.size %> 
-</div>
-<div class="container">
-  Player Seed Total: <%= @player_seed_total %>
-</div>
-<div class="clear"></div>
-
 <div class="regions_container">
-  <b>Regions</b> - <span class="<%= get_region_css_class(4) %>">E = East</span>,
-  <span class="<%= get_region_css_class(2) %>">M = Midwest</span>,
-  <span class="<%= get_region_css_class(1) %>">S = South</span>,
-  <span class="<%= get_region_css_class(3) %>">W = West</span>
+  A roster must contain <b>8</b> <span class="position_guard">guards</span>, <b>8</b> <span class="position_forward">forwards</span> and <b>4</b> centers for a total of <b>20</b> players.  Also, the player seed total must be <b>120</b> or higher once rosters lock in order to be valid!
 </div>
-<div class="clear"></div>
+<div class="regions_container">
+   <p>Your current player total is <b><%= @preferred_players.size %></b> </p>
+   <p>Your current player seed total is <b><%= @player_seed_total %></b></p>
+</div>
 
 <table class="preferred_players_table_headers">
   <tr>
